logs/paxdaemonica.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PaxDaemonica-0.5.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/paxd'...
Listing './lib/python3.5/site-packages/paxd/app'...
Compiling './lib/python3.5/site-packages/paxd/app/command.py'...
***   File "./lib/python3.5/site-packages/paxd/app/command.py", line 35
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paxd/monit'...
Compiling './lib/python3.5/site-packages/paxd/process.py'...
***   File "./lib/python3.5/site-packages/paxd/process.py", line 11
    print ''.join(traceback.format_exception(exc_type, exc_val, exc_tb))
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paxd/server'...
Compiling './lib/python3.5/site-packages/paxd/server/controller.py'...
***   File "./lib/python3.5/site-packages/paxd/server/controller.py", line 37
    print 'STARTING UP CONTROLLER.  pid: ', os.getpid()
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paxd/server/webserver.py'...
***   File "./lib/python3.5/site-packages/paxd/server/webserver.py", line 31
    print 'WebUI listener process exiting\n'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/paxd/webuiapp'...
Listing './lib/python3.5/site-packages/paxd/webuiapp/templates'...
Compiling './lib/python3.5/site-packages/paxd/webuiapp/webui.py'...
***   File "./lib/python3.5/site-packages/paxd/webuiapp/webui.py", line 56
    except Forward, f:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smartpool'...
Compiling './lib/python3.5/site-packages/smartpool/pool.py'...
***   File "./lib/python3.5/site-packages/smartpool/pool.py", line 116
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smartpool-0.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
